# SxB

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build-ios.sh  build-macos.sh  build-windows.bat  copy3rdlib.sh
cmake/: ozz-animation.cmake  sfml.cmake
example/: CMakeLists.txt
example/HelloBGFX-00/: CMakeLists.txt  cube.cpp  cube.h  main.cpp
example/HelloWorld-00/: CMakeLists.txt  logo.h  main.cpp
example/exampleOzz/: CMakeLists.txt  dd.h  hh.h  main.cpp  ozzh.cpp  ozzh.h
example/example_00-HelloBGFX/: CMakeLists.txt
example/example_00-HelloWorld/: CMakeLists.txt  main.cpp
example/example_11-bob/: CMakeLists.txt
example/example_11-coc/: CMakeLists.txt
example/example_12-lod/: CMakeLists.txt
example/example_13-stencil/: CMakeLists.txt
example/example_18-ibl/: CMakeLists.txt  ibl.cpp  ibl.h  main.cpp
example/example_33-pom/: CMakeLists.txt
example/ibl-18/: CMakeLists.txt  ibl.cpp  ibl.h
example/lod-12/: CMakeLists.txt  lod.cpp  lod.h
include/sxbCommon/: Camera.h  Cursor.h  DataStruct.h  Header.h  IEntry.h  Mesh.h  PlaybackController.h  defines.h  imgui.h
script/: open3rdSolution_ios.sh  open3rdSolution_macos.sh  ozz-animation.cmake
src/: CMakeLists.txt
src/sxbCommon/: CMakeLists.txt  Camera.cpp  Cursor.cpp  IEntry.cpp  Mesh.cpp  PlaybackController.cpp  imgui.cpp  utils_p.cpp
